css/style.css
* {
  margin: 0;
  padding: 0;
}

.dashboard-container {
  display: grid;
  grid-template-columns: 1fr 5fr;
}

.sidebar {
  padding: 20px;
  background-color: #222EB3;
  grid-column: 1 / 1;
  grid-row: 1 / 3;
  display: grid;
  grid-auto-rows: max-content;
  gap: 40px;
  color: white;
}

.sidebar-logo {
  font-size: 35px;
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.admin-content {
  font-size: 35px;
}

.site-info {
  font-size: 35px;
}

.header {
  background-color: #fff;
  padding: 20px 40px;
  grid-column: 2 / 3;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  background-color: antiquewhite;
  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
  z-index: 10;
  overflow: visible;
}

.search {
  grid-column: 1 / 4;
  grid-row: 1 / 2;
  display: grid;
  grid-template-columns: auto 3fr;
  align-items: center;
  gap: 10px;
}

input[type="search"] {
  border-radius: 25px;
  border: 1px solid lightgray;
  background-color: lightgray;
  padding: 20px 5px;
}

input[type="search"]:hover {
  border: 1px solid gray;
  outline: gray;
  background-color: rgb(235, 235, 235);
}

input[type="search"]:focus {
  background-color: lightgray;
}

img.user-image-large {
  height: 100px;
  width: 100px;
  border-radius: 50px;
}

img.user-image-small {
  height: 50px;
  width: 50px;
  border-radius: 25px;
}

.user-info {
  grid-column: 5 / 6;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-content: end;
}

.greeting-container {
  grid-column: 1 / 4;
  grid-row: 2 / 3;
  display: grid;
  grid-template-columns: 1fr 7fr;
  align-items: center;
}

.greeting-container img {
  grid-column: 1 / -1;
  grid-row: 1 / -1;

}

.greeting-text {
  grid-column: 2 / -1;
  grid-row: 1 / -1;
  font-weight: bold;

}

.greeting-text .greet-name {
  font-size: 40px;
}

.button-container {
  grid-column: 4 / 5;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
  align-items: end;
}

.button-container button {
  width: 100px;
  height: 50px;
  color: white;
  background-color: rgb(34, 46, 179, 0.75);
  border-color: rgb(34, 46, 179, 0.75);
  border-radius: 25px;
}

.main-content {
  background-color: #d3d1f7;
  grid-column: 2 / 2;
  grid-row: 2 / 3;
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-auto-rows: max-content;
  gap: 40px;
  padding: 25px;
  row-gap: 20px;
}

.projects {
  grid-column: 1 / 2;
  grid-row: 1 / 3;
  display: grid;
  grid-template-columns: repeat(2, minmax(250px, 1fr));
  grid-template-rows: max-content;
  grid-auto-rows: minmax(200px, 1fr);
  gap: 15px;
}

.main-content-title {
  grid-column: 1 / -1;
  font-size: 35px;

}

.projects .card {
  background-color: antiquewhite;
  border-radius: 5px;
  border-top: 10px solid #FF5100;
  padding: 20px 10px;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
}

.card .card-title {
  font-size: 18px;
  text-align: center;
  font-weight: bold;
}

.card p {
  color: black;
  font-size: 14px;
}

.announcements {
  grid-column: 2 / 3;
  grid-row: 1 / 1;
  display: grid;
  grid-auto-rows: min-content;
  gap: 15px;
}

.announcement-card {
  background-color: antiquewhite;
  border-radius: 5px;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
  padding: 20px 10px;
  display: grid;
  grid-auto-rows: max-content;
  gap: 20px;
}

.announcement {
  border-bottom: 2px solid lightgray;
  padding-bottom: 20px;
}

.announcement:last-child {
  border: none;
}

.announcement-title {
  font-size: 18px;
  font-weight: bold;
}

.trending {
  grid-column: 2 / 3;
  grid-row: 2 / 2;
  display: grid;
  grid-auto-rows: min-content;
  gap: 15px;
}

.trending-card {
  background-color: antiquewhite;
  border-radius: 5px;
  padding: 20px 10px;
  display: grid;
  grid-auto-rows: max-content;
  gap: 20px;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
}

.trend {
  display: grid;
  gap: 10px;
  padding-bottom: 10px;
  border-bottom: 2px solid lightgray;
  justify-content: start;
  align-items: center;
}

.trending-user:last-child {
  border: none;
}

.trending-user img {
  grid-row: 1 / -1;
}

.trending-user{
  grid-column: 2 / 3;
  grid-row: 1 / 1;
}

.trending-user .username {
  font-weight: bold;
}

